tests/rosetta/transpiler/C/bitwise-io-1.error
compile failed: exit status 1: /tmp/ctranspile1655470726/bitwise-io-1.mochi.c: In function ‘_mem’:
/tmp/ctranspile1655470726/bitwise-io-1.mochi.c:46:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   46 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile1655470726/bitwise-io-1.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile1655470726/bitwise-io-1.mochi.c: In function ‘writeBitsLSB’:
/tmp/ctranspile1655470726/bitwise-io-1.mochi.c:100:18: warning: implicit declaration of function ‘append’ [-Wimplicit-function-declaration]
  100 |         w.data = append(w.data, b);
      |                  ^~~~~~
/tmp/ctranspile1655470726/bitwise-io-1.mochi.c:100:16: warning: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  100 |         w.data = append(w.data, b);
      |                ^
/tmp/ctranspile1655470726/bitwise-io-1.mochi.c: In function ‘writeBitsMSB’:
/tmp/ctranspile1655470726/bitwise-io-1.mochi.c:112:16: warning: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  112 |         w.data = append(w.data, b);
      |                ^
/tmp/ctranspile1655470726/bitwise-io-1.mochi.c: In function ‘CloseWriter’:
/tmp/ctranspile1655470726/bitwise-io-1.mochi.c:131:16: warning: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  131 |         w.data = append(w.data, w.bits % 256LL);
      |                ^
/usr/bin/ld: /tmp/ccNZhYru.o: in function `writeBitsLSB':
bitwise-io-1.mochi.c:(.text+0x377): undefined reference to `append'
/usr/bin/ld: /tmp/ccNZhYru.o: in function `writeBitsMSB':
bitwise-io-1.mochi.c:(.text+0x44f): undefined reference to `append'
/usr/bin/ld: /tmp/ccNZhYru.o: in function `CloseWriter':
bitwise-io-1.mochi.c:(.text+0x5f4): undefined reference to `append'
collect2: error: ld returned 1 exit status

