tests/rosetta/transpiler/C/bitwise-io-1.c
// Generated by Mochi 0.10.32 on 2025-07-31 12:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>


static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

typedef struct Writer Writer;

struct Writer {
    const char* order;
    int bits;
    int nbits;
    int *data;
    size_t data_len;
};

int pow2(int n);
int lshift(int x, int n);
int rshift(int x, int n);
Writer NewWriter(const char* order);
Writer writeBitsLSB(Writer w, int c, int width);
Writer writeBitsMSB(Writer w, int c, int width);
Writer WriteBits(Writer w, int c, int width);
Writer CloseWriter(Writer w);
const char* toBinary(int n, int bits);
const char* bytesToBits(int * bs, size_t bs_len);
int ExampleWriter_WriteBits();
int main(void);

int pow2(int n) {
    int v = 1LL;
    int i = 0LL;
    while (i < n) {
        v = v * 2LL;
        i = i + 1LL;
    }
    return v;
}

int lshift(int x, int n) {
    return x * pow2(n);
}

int rshift(int x, int n) {
    return x / pow2(n);
}

Writer NewWriter(const char* order) {
    return (Writer){.order = order, .bits = 0LL, .nbits = 0LL, .data = NULL, .data_len = 0};
}

Writer writeBitsLSB(Writer w, int c, int width) {
    w.bits = w.bits + lshift(c, w.nbits);
    w.nbits = w.nbits + width;
    while (w.nbits >= 8LL) {
        int b = w.bits % 256LL;
        w.data = append(w.data, b);
        w.bits = rshift(w.bits, 8LL);
        w.nbits = w.nbits - 8LL;
    }
    return w;
}

Writer writeBitsMSB(Writer w, int c, int width) {
    w.bits = w.bits + lshift(c, (32LL - width) - w.nbits);
    w.nbits = w.nbits + width;
    while (w.nbits >= 8LL) {
        int b = rshift(w.bits, 24LL) % 256LL;
        w.data = append(w.data, b);
        w.bits = (w.bits % pow2(24LL)) * 256LL;
        w.nbits = w.nbits - 8LL;
    }
    return w;
}

Writer WriteBits(Writer w, int c, int width) {
    if (strcmp(w.order, "LSB") == 0) {
        return writeBitsLSB(w, c, width);
    }
    return writeBitsMSB(w, c, width);
}

Writer CloseWriter(Writer w) {
    if (w.nbits > 0LL) {
        if (strcmp(w.order, "MSB") == 0) {
            w.bits = rshift(w.bits, 24LL);
        }
        w.data = append(w.data, w.bits % 256LL);
    }
    w.bits = 0LL;
    w.nbits = 0LL;
    return w;
}

const char* toBinary(int n, int bits) {
    const char* b = "";
    int val = n;
    int i = 0LL;
    while (i < bits) {
        b = str_concat(str_int(val % 2LL), b);
        val = val / 2LL;
        i = i + 1LL;
    }
    return b;
}

const char* bytesToBits(int * bs, size_t bs_len) {
    const char* out = "[";
    int i = 0LL;
    while (i < bs_len) {
        out = str_concat(out, toBinary(bs[(int)(i)], 8LL));
        if ((i + 1LL) < bs_len) {
            out = str_concat(out, " ");
        }
        i = i + 1LL;
    }
    out = str_concat(out, "]");
    return out;
}

int ExampleWriter_WriteBits() {
    Writer bw = NewWriter("MSB");
    bw = WriteBits(bw, 15LL, 4LL);
    bw = WriteBits(bw, 0LL, 1LL);
    bw = WriteBits(bw, 19LL, 5LL);
    bw = CloseWriter(bw);
    puts(bytesToBits(bw.data, bw.data_len));
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        ExampleWriter_WriteBits();
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
